@startuml

' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *id : int <<generated>> PK
  --
  *email : char <<unique>>
  *password : text
  *provider : text
  *socialId : text
  *firstName : text
  *lastName : text
  *hash : text
  *createdAt: timestamp
  *updatedAt: timestamp
  *deletedAt: timestamp
  *roleId: int <<FK>>
  *statusId: int <<FK>>
  --
  level:int
  exp: int
}

entity "LoginHistory" as loginHistory {
  *id: int <<generated>> PK
  --
  *userId: int <<FK>>
  *createdAt: timestamp
  *ipAddress: timestamp
}

entity "UserProfile" as userProfile {
  *id: int <<generated>> PK
  --
  *field: text
  *isFilled: boolean
  *userId: int <<FK>>
}

entity "Association" as association {
  *id: int <<generated>> PK
  --
  *shortTitle: text
  *title: text
  *createdBy: int <<FK>> user
  *createdAt: timestamp
  *deletedAt: timestamp
} 

entity "Membership" as membership {
  *id: int <<generated>> PK
  --
  *userId: int <<FK>> user
  *associationId: int <<FK>> association
  *startedAt: timestamp
  *leftAt: timestamp
}

entity "Roles" as roles {
  *id : int <<generated>> PK
  --
  *name : char
}

entity "Statuses" as statuses {
  *id : int <<generated>> PK
  --
  *name : char
}

entity "JoinRequest" as joinReq {
  *id: int <<generated>> PK
  --
  *userId: int <<FK>> user
  *associationId: int <<FK>> association
  *description: text
  *createdAt: timestamp
}

user }o..|| roles
user }o..|| statuses
user ||..o| association
user ||..o{ joinReq
joinReq }o..|| association 

@enduml